tests/NormalTests/paczka1/small_fuzzy/24107871.err
Error in line 2: Gykm S31 34,32
Error in line 1: Gykm S264 35,7
